2005-04-08	Christian Hergert	<christian.hergert@gmail.com>

	* Services/DefaultLoggingService.cs: Add missing event firing for Error
	method. Attempt to fix the constructor to be more like  log4net examples.

2005-04-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs: Implemented
	IncludeFileToProject command.
	* Commands/ProjectBrowserCommands/GeneralNodeCommands.cs:
	New copy/cut/paste commands for tree nodes.
	* Services/File/DefaultFileService.cs:
	IFileService.cs: Use a progress monitor when opening files. OpenFile now
	return an IAsyncOperation object that can be used to track the status
	of the operation. Added methods for copying and moving files.
	* Services/DispatchService/DispatchService.cs: Dispatch all pending
	messages at once in the GUI thread. It gives better performance.
	* Services/Tasks/Task.cs: Track changes in IFileService.
	
	* Services/Project/IProjectService.cs:
	* Services/Project/ProjectService.cs: Implemented method for copying
	files between projects.
	
	* Gui/Pads/SolutionPad/TreeViewPad.cs: Implemented support for
	drag&drop and copy/paste. Some other internal improvements.
	* Gui/Pads/SolutionPad/ITreeNavigator.cs,
	* Gui/Pads/SolutionPad/TypeNodeBuilder.cs: Some API adjustments.
	* Gui/Pads/SolutionPad/NodeState.cs: New class that can store the
	status of a tree.
	
	* Gui/Pads/ProjectPad/ProjectFolder.cs:
	* Gui/Pads/ProjectPad/ProjectNodeBuilder.cs:
	* Gui/Pads/ProjectPad/ProjectFolderNodeBuilder.cs:
	* Gui/Pads/ProjectPad/ProjectFileNodeBuilder.cs:
	* Gui/Pads/ProjectPad/FolderNodeBuilder.cs:
	* MonoDevelopCore.addin.xml:
	Implemented support for drag&drop of files and folders. Moved all code
	that handles the ShowAllFiles option to its own node builder extension.
	
	* Gui/Pads/ProjectPad/SystemFile.cs:
	* Gui/Pads/ProjectPad/ShowAllFilesBuilderExtension.cs:
	* Gui/Pads/ProjectPad/SystemFileNodeBuilder.cs:
	New classes that implement the ShowAllFiles option.
	